<resources>
    <string name="app_name">Car Wash</string>
    <string name="slogan">Clean. Fast. Friendly.</string>
    <string name="slogan2">Beyond clean and more than just shine!</string>
    <string name="signin">SIGN IN</string>
    <string name="username_label">Username</string>
    <string name="password_label">Password</string>
    <string name="email_label">Email Address</string>
    <string name="name_label">Name</string>
    <string name="phone_label">Phone Number</string>
    <string name="gender_label">Gender</string>
    <string name="bio_label">Your Passion?</string>
    <string name="explore">EXPLORE NOW</string>
    <string name="new_account_label">New Account ?</string>
    <string name="google">Google</string>
    <string-array name="gender_options">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>
    <string name="title_activity_home">HomeAct</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Your Name</string>
    <string name="nav_header_subtitle">Your.Email@Mail.com</string>
    <string name="nav_header_Photo">Your Photo</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="logout">Logout</string>
</resources>
